test/error/ast/SetLeftElemBiggerRightElem.mod
MODULE SetLeftElemBiggerRightElem;
VAR s: SET;
BEGIN
  s := {5 .. 2};
END SetLeftElemBiggerRightElem.
